--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,12 @@ log = "0.4"
 env_logger = "0.9"
 mongodb = "2.1.0"
 serde = { version = "1", features = ["derive"] }
-lazy_static = "1.4.0"
+serde_json = "1"
+chrono = { version = "0.4", features = ["serde"] }
+#lazy_static = "1.4.0"
+once_cell = "1.9"
 anyhow = "1.0"
 thiserror = "1.0"
 strum = "0.23"
 strum_macros = "0.23"
+sha-1 = "0.7"
