--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,6 @@ strum = "0.23"
 strum_macros = "0.23"
 sha-1 = "0.7"
 futures = "0.3"
+
+[dev-dependencies]
+reqwest = { version = "0.11", features = ["json"] }
