--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,7 @@ tokio = {version = "1", features = ["full"]}
 config = "0.11"
 actix-web = "4"
 log = "0.4"
-env_logger = "0.9"
-mongodb = "2.1.0"
+mongodb = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 chrono = { version = "0.4", features = ["serde"] }
@@ -23,6 +22,8 @@ strum = "0.23"
 strum_macros = "0.23"
 sha-1 = "0.7"
 futures = "0.3"
+tracing = "0.1"
+tracing-subscriber = "0.2"
 
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["json"] }
