--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 tokio = {version = "1", features = ["full"]}
 config = "0.11"
 actix-web = "4"
-log = "0.4"
+# log = "0.4"
 mongodb = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
