--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ chrono = { version = "0.4", features = ["serde"] }
 once_cell = "1.9"
 anyhow = "1.0"
 thiserror = "1.0"
-strum = "0.23"
-strum_macros = "0.23"
+#strum = "0.23"
+#strum_macros = "0.23"
 sha-1 = "0.7"
 futures = "0.3"
 tracing = "0.1"
