--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ edition = "2021"
 [dependencies]
 tokio = {version = "1", features = ["full"]}
 config = "0.13"
-actix-web = "4"
-# log = "0.4"
+#actix-web = "4"
+
+axum = "0.5"
+
 mongodb = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -23,7 +25,8 @@ thiserror = "1.0"
 sha-1 = "0.7"
 futures = "0.3"
 tracing = "0.1"
-tracing-subscriber = "0.2"
+tracing-subscriber = "0.3"
+http = "0.2"
 
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["json"] }
