--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ sha-1 = "0.7"
 futures = "0.3"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+tracing-appender = "0.2"
 http = "0.2"
 
 [dev-dependencies]
