--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing-appender = "0.2"
 http = "0.2"
+tower = { version = "0.4", features = ["util", "filter"] }
+hyper = { version = "0.14", features = ["full"] }
 
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["json"] }
